--- a/index.html
+++ b/index.html
@@ -1,16 +1,84 @@
 <html>
-    <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
+<head> 
+<title>Simple interest calculator</title>
+<script type="text/javascript" src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+</head>
+<body class="body">
+	<center>
+	<div class="main">
+	<h1>Simple Interest Calculator</h1>
+	<form name="SIC">
+	<table>
+		<script>
+			function fetch()
+{
+var get  = document.getElementById("get").value;
+document.getElementById("put").value = get;
+}
+		</script>
+		<tr>
+			<td><label>Amount</label></td>
+			<td><input type="number" id="amount"></td>
+		</tr>
+		<tr>
+			<td><label>Inerest Rate</label></td>
+			<td><div class="slidecontainer">
+            <input type="range" min="1" max="20" value="0" class="slider" id="get" step="0.5" onchange="fetch()"/>
+			<input type="text" id="put" />
+          </div></td>
+		</tr>
+		
+		<tr>
+			<td><label>No. of Years</label></td>
+			<td><select id="year">
+			<option value="1">1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+			<option value="6">6</option>
+			<option value="7">7</option>
+			<option value="8">8</option>
+			<option value="9">9</option>
+			<option value="10">10</option>
+			<option value="11">11</option>
+			<option value="12">12</option>
+			<option value="13">13</option>
+			<option value="14">14</option>
+			<option value="15">15</option>
+			<option value="16">16</option>
+			<option value="17">17</option>
+			<option value="18">18</option>
+			<option value="19">19</option>
+			<option value="20">20</option>
+			<option value="21">21</option>
+			<option value="22">22</option>
+			<option value="23">23</option>
+			<option value="24">24</option>
+			<option value="25">25</option>
+			<option value="26">26</option>
+			<option value="27">27</option>
+			<option value="28">28</option>
+			<option value="29">29</option>
+			<option value="30">30</option>
+			<option value="31">31</option>
+			</select></td>
+		</tr>
+		<tr>
+			<td><button type="button" onclick="cal()">Compute Interest</button></td>
+		</tr>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
-    </body>
+	</table>
+	</form>
+	
+	<p id="aa"></p>
+	<p id="bb"></p>
+	<p id="result"></p>
+	<p id="cc"></p>
+	<div id="footer">© Everyone Can Get Rich
+	</div>
+	</div>
+	</center>
+</body>
 </html>
